antlr/antlr/BazParser.cpp

// Generated from antlr/Baz.g4 by ANTLR 4.12.0


#include "BazVisitor.h"

#include "BazParser.h"


using namespace antlrcpp;
using namespace parse;

using namespace antlr4;

namespace {

struct BazParserStaticData final {
  BazParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BazParserStaticData(const BazParserStaticData&) = delete;
  BazParserStaticData(BazParserStaticData&&) = delete;
  BazParserStaticData& operator=(const BazParserStaticData&) = delete;
  BazParserStaticData& operator=(BazParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag bazParserOnceFlag;
BazParserStaticData *bazParserStaticData = nullptr;

void bazParserInitialize() {
  assert(bazParserStaticData == nullptr);
  auto staticData = std::make_unique<BazParserStaticData>(
    std::vector<std::string>{
      "program", "funcblock", "func", "arg", "rettype", "classblock", "class", 
      "stmt", "decl", "arrdecl", "assign", "callstmt", "stmtblock", "ifblock", 
      "if", "elseif", "else", "whileblock", "dowhileblock", "while", "dowhile", 
      "forblock", "for", "block", "break", "end", "return", "stmtlist", 
      "exp", "boollit", "charlit", "intlit", "reallit", "stringlit", "variable", 
      "type", "arraytype", "basetype"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "'n'", "'t'", "'r'", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "'''", "'\"'", 
      "'\\'"
    },
    std::vector<std::string>{
      "", "STRINGLIT", "NAME", "REALLIT", "CHARLIT", "INTLIT", "ESCSEQ", 
      "ESCLINE", "ESCTAB", "ESCRET", "SCOMMENT", "MCOMMENT", "OR", "AND", 
      "EQUAL", "NOTEQUAL", "BITLSHIFT", "BITRSHIFT", "GREATEREQ", "LESSEQ", 
      "GREATER", "LESS", "ADD", "SUBTRACT", "MULTIPLY", "DIVIDE", "MODULUS", 
      "NOT", "BITOR", "BITAND", "BITNOT", "BITXOR", "ACCESS", "ASSIGN", 
      "OBRACK", "CBRACK", "OBRACE", "CBRACE", "OPAREN", "CPAREN", "COMMA", 
      "COLON", "EOS", "BOOL", "CHAR", "INT", "LONG", "REAL", "TRUE", "FALSE", 
      "VOID", "BREAK", "RETURN", "END", "BLOCK", "IF", "ELSE", "DOWHILE", 
      "WHILE", "FOR", "CLASS", "WS", "EOL", "SQUOTE", "DQUOTE", "BSLASH"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  bazParserStaticData = staticData.release();
}

}

BazParser::BazParser(TokenStream *input) : BazParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BazParser::BazParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BazParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *bazParserStaticData->atn, bazParserStaticData->decisionToDFA, bazParserStaticData->sharedContextCache, options);
}

BazParser::~BazParser() {
  delete _interpreter;
}

const atn::ATN& BazParser::getATN() const {
  return *bazParserStaticData->atn;
}

std::string BazParser::getGrammarFileName() const {
  return "Baz.g4";
}

const std::vector<std::string>& BazParser::getRuleNames() const {
  return bazParserStaticData->ruleNames;
}

const dfa::Vocabulary& BazParser::getVocabulary() const {
  return bazParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BazParser::getSerializedATN() const {
  return bazParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

BazParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BazParser::FuncblockContext *> BazParser::ProgramContext::funcblock() {
  return getRuleContexts<BazParser::FuncblockContext>();
}

BazParser::FuncblockContext* BazParser::ProgramContext::funcblock(size_t i) {
  return getRuleContext<BazParser::FuncblockContext>(i);
}

std::vector<BazParser::ClassblockContext *> BazParser::ProgramContext::classblock() {
  return getRuleContexts<BazParser::ClassblockContext>();
}

BazParser::ClassblockContext* BazParser::ProgramContext::classblock(size_t i) {
  return getRuleContext<BazParser::ClassblockContext>(i);
}

std::vector<BazParser::DeclContext *> BazParser::ProgramContext::decl() {
  return getRuleContexts<BazParser::DeclContext>();
}

BazParser::DeclContext* BazParser::ProgramContext::decl(size_t i) {
  return getRuleContext<BazParser::DeclContext>(i);
}

std::vector<tree::TerminalNode *> BazParser::ProgramContext::EOS() {
  return getTokens(BazParser::EOS);
}

tree::TerminalNode* BazParser::ProgramContext::EOS(size_t i) {
  return getToken(BazParser::EOS, i);
}


size_t BazParser::ProgramContext::getRuleIndex() const {
  return BazParser::RuleProgram;
}


std::any BazParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

BazParser::ProgramContext* BazParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, BazParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1154320083397378052) != 0)) {
      setState(81);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(76);
        funcblock();
        break;
      }

      case 2: {
        setState(77);
        classblock();
        break;
      }

      case 3: {
        setState(78);
        decl();
        setState(79);
        match(BazParser::EOS);
        break;
      }

      default:
        break;
      }
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncblockContext ------------------------------------------------------------------

BazParser::FuncblockContext::FuncblockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BazParser::FuncContext* BazParser::FuncblockContext::func() {
  return getRuleContext<BazParser::FuncContext>(0);
}

std::vector<tree::TerminalNode *> BazParser::FuncblockContext::EOS() {
  return getTokens(BazParser::EOS);
}

tree::TerminalNode* BazParser::FuncblockContext::EOS(size_t i) {
  return getToken(BazParser::EOS, i);
}

BazParser::StmtlistContext* BazParser::FuncblockContext::stmtlist() {
  return getRuleContext<BazParser::StmtlistContext>(0);
}

BazParser::EndContext* BazParser::FuncblockContext::end() {
  return getRuleContext<BazParser::EndContext>(0);
}


size_t BazParser::FuncblockContext::getRuleIndex() const {
  return BazParser::RuleFuncblock;
}


std::any BazParser::FuncblockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitFuncblock(this);
  else
    return visitor->visitChildren(this);
}

BazParser::FuncblockContext* BazParser::funcblock() {
  FuncblockContext *_localctx = _tracker.createInstance<FuncblockContext>(_ctx, getState());
  enterRule(_localctx, 2, BazParser::RuleFuncblock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    func();
    setState(87);
    match(BazParser::EOS);
    setState(88);
    stmtlist();
    setState(89);
    end();
    setState(90);
    match(BazParser::EOS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

BazParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BazParser::RettypeContext* BazParser::FuncContext::rettype() {
  return getRuleContext<BazParser::RettypeContext>(0);
}

tree::TerminalNode* BazParser::FuncContext::NAME() {
  return getToken(BazParser::NAME, 0);
}

tree::TerminalNode* BazParser::FuncContext::OPAREN() {
  return getToken(BazParser::OPAREN, 0);
}

tree::TerminalNode* BazParser::FuncContext::CPAREN() {
  return getToken(BazParser::CPAREN, 0);
}

std::vector<BazParser::ArgContext *> BazParser::FuncContext::arg() {
  return getRuleContexts<BazParser::ArgContext>();
}

BazParser::ArgContext* BazParser::FuncContext::arg(size_t i) {
  return getRuleContext<BazParser::ArgContext>(i);
}

std::vector<tree::TerminalNode *> BazParser::FuncContext::COMMA() {
  return getTokens(BazParser::COMMA);
}

tree::TerminalNode* BazParser::FuncContext::COMMA(size_t i) {
  return getToken(BazParser::COMMA, i);
}


size_t BazParser::FuncContext::getRuleIndex() const {
  return BazParser::RuleFunc;
}


std::any BazParser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}

BazParser::FuncContext* BazParser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 4, BazParser::RuleFunc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    rettype();
    setState(93);
    match(BazParser::NAME);
    setState(94);
    match(BazParser::OPAREN);
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 272678883688452) != 0)) {
      setState(95);
      arg();
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == BazParser::COMMA) {
        setState(96);
        match(BazParser::COMMA);
        setState(97);
        arg();
        setState(102);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(105);
    match(BazParser::CPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgContext ------------------------------------------------------------------

BazParser::ArgContext::ArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BazParser::TypeContext* BazParser::ArgContext::type() {
  return getRuleContext<BazParser::TypeContext>(0);
}

tree::TerminalNode* BazParser::ArgContext::NAME() {
  return getToken(BazParser::NAME, 0);
}


size_t BazParser::ArgContext::getRuleIndex() const {
  return BazParser::RuleArg;
}


std::any BazParser::ArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitArg(this);
  else
    return visitor->visitChildren(this);
}

BazParser::ArgContext* BazParser::arg() {
  ArgContext *_localctx = _tracker.createInstance<ArgContext>(_ctx, getState());
  enterRule(_localctx, 6, BazParser::RuleArg);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    type();
    setState(108);
    match(BazParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RettypeContext ------------------------------------------------------------------

BazParser::RettypeContext::RettypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BazParser::TypeContext* BazParser::RettypeContext::type() {
  return getRuleContext<BazParser::TypeContext>(0);
}

tree::TerminalNode* BazParser::RettypeContext::VOID() {
  return getToken(BazParser::VOID, 0);
}


size_t BazParser::RettypeContext::getRuleIndex() const {
  return BazParser::RuleRettype;
}


std::any BazParser::RettypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitRettype(this);
  else
    return visitor->visitChildren(this);
}

BazParser::RettypeContext* BazParser::rettype() {
  RettypeContext *_localctx = _tracker.createInstance<RettypeContext>(_ctx, getState());
  enterRule(_localctx, 8, BazParser::RuleRettype);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(112);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BazParser::NAME:
      case BazParser::BOOL:
      case BazParser::CHAR:
      case BazParser::INT:
      case BazParser::LONG:
      case BazParser::REAL: {
        enterOuterAlt(_localctx, 1);
        setState(110);
        type();
        break;
      }

      case BazParser::VOID: {
        enterOuterAlt(_localctx, 2);
        setState(111);
        match(BazParser::VOID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassblockContext ------------------------------------------------------------------

BazParser::ClassblockContext::ClassblockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BazParser::ClassContext* BazParser::ClassblockContext::class_() {
  return getRuleContext<BazParser::ClassContext>(0);
}

std::vector<tree::TerminalNode *> BazParser::ClassblockContext::EOS() {
  return getTokens(BazParser::EOS);
}

tree::TerminalNode* BazParser::ClassblockContext::EOS(size_t i) {
  return getToken(BazParser::EOS, i);
}

BazParser::EndContext* BazParser::ClassblockContext::end() {
  return getRuleContext<BazParser::EndContext>(0);
}

std::vector<BazParser::DeclContext *> BazParser::ClassblockContext::decl() {
  return getRuleContexts<BazParser::DeclContext>();
}

BazParser::DeclContext* BazParser::ClassblockContext::decl(size_t i) {
  return getRuleContext<BazParser::DeclContext>(i);
}


size_t BazParser::ClassblockContext::getRuleIndex() const {
  return BazParser::RuleClassblock;
}


std::any BazParser::ClassblockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitClassblock(this);
  else
    return visitor->visitChildren(this);
}

BazParser::ClassblockContext* BazParser::classblock() {
  ClassblockContext *_localctx = _tracker.createInstance<ClassblockContext>(_ctx, getState());
  enterRule(_localctx, 10, BazParser::RuleClassblock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    class_();
    setState(115);
    match(BazParser::EOS);
    setState(121);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 272678883688452) != 0)) {
      setState(116);
      decl();
      setState(117);
      match(BazParser::EOS);
      setState(123);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(124);
    end();
    setState(125);
    match(BazParser::EOS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassContext ------------------------------------------------------------------

BazParser::ClassContext::ClassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BazParser::ClassContext::CLASS() {
  return getToken(BazParser::CLASS, 0);
}

tree::TerminalNode* BazParser::ClassContext::NAME() {
  return getToken(BazParser::NAME, 0);
}


size_t BazParser::ClassContext::getRuleIndex() const {
  return BazParser::RuleClass;
}


std::any BazParser::ClassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitClass(this);
  else
    return visitor->visitChildren(this);
}

BazParser::ClassContext* BazParser::class_() {
  ClassContext *_localctx = _tracker.createInstance<ClassContext>(_ctx, getState());
  enterRule(_localctx, 12, BazParser::RuleClass);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    match(BazParser::CLASS);
    setState(128);
    match(BazParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

BazParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BazParser::DeclContext* BazParser::StmtContext::decl() {
  return getRuleContext<BazParser::DeclContext>(0);
}

BazParser::AssignContext* BazParser::StmtContext::assign() {
  return getRuleContext<BazParser::AssignContext>(0);
}

BazParser::CallstmtContext* BazParser::StmtContext::callstmt() {
  return getRuleContext<BazParser::CallstmtContext>(0);
}

BazParser::StmtblockContext* BazParser::StmtContext::stmtblock() {
  return getRuleContext<BazParser::StmtblockContext>(0);
}

BazParser::IfblockContext* BazParser::StmtContext::ifblock() {
  return getRuleContext<BazParser::IfblockContext>(0);
}

BazParser::WhileblockContext* BazParser::StmtContext::whileblock() {
  return getRuleContext<BazParser::WhileblockContext>(0);
}

BazParser::DowhileblockContext* BazParser::StmtContext::dowhileblock() {
  return getRuleContext<BazParser::DowhileblockContext>(0);
}

BazParser::ForblockContext* BazParser::StmtContext::forblock() {
  return getRuleContext<BazParser::ForblockContext>(0);
}

BazParser::ReturnContext* BazParser::StmtContext::return_() {
  return getRuleContext<BazParser::ReturnContext>(0);
}

BazParser::BreakContext* BazParser::StmtContext::break_() {
  return getRuleContext<BazParser::BreakContext>(0);
}


size_t BazParser::StmtContext::getRuleIndex() const {
  return BazParser::RuleStmt;
}


std::any BazParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

BazParser::StmtContext* BazParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 14, BazParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(140);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(130);
      decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(131);
      assign();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(132);
      callstmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(133);
      stmtblock();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(134);
      ifblock();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(135);
      whileblock();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(136);
      dowhileblock();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(137);
      forblock();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(138);
      return_();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(139);
      break_();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

BazParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BazParser::TypeContext* BazParser::DeclContext::type() {
  return getRuleContext<BazParser::TypeContext>(0);
}

BazParser::VariableContext* BazParser::DeclContext::variable() {
  return getRuleContext<BazParser::VariableContext>(0);
}

BazParser::ArrdeclContext* BazParser::DeclContext::arrdecl() {
  return getRuleContext<BazParser::ArrdeclContext>(0);
}

tree::TerminalNode* BazParser::DeclContext::ASSIGN() {
  return getToken(BazParser::ASSIGN, 0);
}

BazParser::ExpContext* BazParser::DeclContext::exp() {
  return getRuleContext<BazParser::ExpContext>(0);
}


size_t BazParser::DeclContext::getRuleIndex() const {
  return BazParser::RuleDecl;
}


std::any BazParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

BazParser::DeclContext* BazParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 16, BazParser::RuleDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(152);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(142);
      type();
      setState(143);
      variable();
      setState(145);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == BazParser::CBRACK) {
        setState(144);
        arrdecl();
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(147);
      type();
      setState(148);
      variable();
      setState(149);
      match(BazParser::ASSIGN);
      setState(150);
      exp(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrdeclContext ------------------------------------------------------------------

BazParser::ArrdeclContext::ArrdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BazParser::ArrdeclContext::CBRACK() {
  return getTokens(BazParser::CBRACK);
}

tree::TerminalNode* BazParser::ArrdeclContext::CBRACK(size_t i) {
  return getToken(BazParser::CBRACK, i);
}

std::vector<BazParser::ExpContext *> BazParser::ArrdeclContext::exp() {
  return getRuleContexts<BazParser::ExpContext>();
}

BazParser::ExpContext* BazParser::ArrdeclContext::exp(size_t i) {
  return getRuleContext<BazParser::ExpContext>(i);
}

std::vector<tree::TerminalNode *> BazParser::ArrdeclContext::OBRACK() {
  return getTokens(BazParser::OBRACK);
}

tree::TerminalNode* BazParser::ArrdeclContext::OBRACK(size_t i) {
  return getToken(BazParser::OBRACK, i);
}


size_t BazParser::ArrdeclContext::getRuleIndex() const {
  return BazParser::RuleArrdecl;
}


std::any BazParser::ArrdeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitArrdecl(this);
  else
    return visitor->visitChildren(this);
}

BazParser::ArrdeclContext* BazParser::arrdecl() {
  ArrdeclContext *_localctx = _tracker.createInstance<ArrdeclContext>(_ctx, getState());
  enterRule(_localctx, 18, BazParser::RuleArrdecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(154);
      match(BazParser::CBRACK);
      setState(155);
      exp(0);
      setState(156);
      match(BazParser::OBRACK);
      setState(160); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == BazParser::CBRACK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

BazParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BazParser::ExpContext *> BazParser::AssignContext::exp() {
  return getRuleContexts<BazParser::ExpContext>();
}

BazParser::ExpContext* BazParser::AssignContext::exp(size_t i) {
  return getRuleContext<BazParser::ExpContext>(i);
}

tree::TerminalNode* BazParser::AssignContext::ASSIGN() {
  return getToken(BazParser::ASSIGN, 0);
}


size_t BazParser::AssignContext::getRuleIndex() const {
  return BazParser::RuleAssign;
}


std::any BazParser::AssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitAssign(this);
  else
    return visitor->visitChildren(this);
}

BazParser::AssignContext* BazParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 20, BazParser::RuleAssign);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    exp(0);
    setState(163);
    match(BazParser::ASSIGN);
    setState(164);
    exp(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CallstmtContext ------------------------------------------------------------------

BazParser::CallstmtContext::CallstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BazParser::ExpContext* BazParser::CallstmtContext::exp() {
  return getRuleContext<BazParser::ExpContext>(0);
}


size_t BazParser::CallstmtContext::getRuleIndex() const {
  return BazParser::RuleCallstmt;
}


std::any BazParser::CallstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BazVisitor*>(visitor))
    return parserVisitor->visitCallstmt(this);
  else
    return visitor->visitChildren(this);
}

BazParser::CallstmtContext* BazParser::callstmt() {
  CallstmtContext *_localctx = _tracker.createInstance<CallstmtContext>(_ctx, getState());
  enterRule(_localctx, 22, BazParser::RuleCallstmt);
